// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:1)
> 1 | 1 ++
    | ^
Cause: Invalid left-hand side in postfix operation. (1:0)"
`;

exports[`snippet: #0 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:1)
> 1 | 1 ++
    | ^"
`;

exports[`snippet: #0 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | 1 ++
    | ^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:2)
> 1 | (1)++
    |  ^
Cause: Invalid left-hand side in postfix operation. (1:1)"
`;

exports[`snippet: #1 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:2)
> 1 | (1)++
    |  ^"
`;

exports[`snippet: #1 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | (1)++
    | ^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:2)
> 1 | (1)--
    |  ^
Cause: Invalid left-hand side in postfix operation. (1:1)"
`;

exports[`snippet: #2 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:2)
> 1 | (1)--
    |  ^"
`;

exports[`snippet: #2 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | (1)--
    | ^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #3 [babel-ts] format 1`] = `
"Invalid left-hand side in prefix operation. (1:4)
> 1 | ++(1)
    |    ^
Cause: Invalid left-hand side in prefix operation. (1:3)"
`;

exports[`snippet: #3 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:4)
> 1 | ++(1)
    |    ^"
`;

exports[`snippet: #3 format 1`] = `
"Invalid left-hand side expression in unary operation (1:3)
> 1 | ++(1)
    |   ^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #4 [babel-ts] format 1`] = `
"Invalid left-hand side in prefix operation. (1:4)
> 1 | --(1)
    |    ^
Cause: Invalid left-hand side in prefix operation. (1:3)"
`;

exports[`snippet: #4 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:4)
> 1 | --(1)
    |    ^"
`;

exports[`snippet: #4 format 1`] = `
"Invalid left-hand side expression in unary operation (1:3)
> 1 | --(1)
    |   ^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #5 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:2)
> 1 | (1 + 2)++
    |  ^
Cause: Invalid left-hand side in postfix operation. (1:1)"
`;

exports[`snippet: #5 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:2)
> 1 | (1 + 2)++
    |  ^^^^^"
`;

exports[`snippet: #5 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | (1 + 2)++
    | ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #6 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:2)
> 1 | (1 + 2)--
    |  ^
Cause: Invalid left-hand side in postfix operation. (1:1)"
`;

exports[`snippet: #6 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:2)
> 1 | (1 + 2)--
    |  ^^^^^"
`;

exports[`snippet: #6 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | (1 + 2)--
    | ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #7 [babel-ts] format 1`] = `
"Invalid left-hand side in prefix operation. (1:4)
> 1 | ++(1 + 2)
    |    ^
Cause: Invalid left-hand side in prefix operation. (1:3)"
`;

exports[`snippet: #7 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:4)
> 1 | ++(1 + 2)
    |    ^^^^^"
`;

exports[`snippet: #7 format 1`] = `
"Invalid left-hand side expression in unary operation (1:3)
> 1 | ++(1 + 2)
    |   ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #8 [babel-ts] format 1`] = `
"Invalid left-hand side in prefix operation. (1:4)
> 1 | --(1 + 2)
    |    ^
Cause: Invalid left-hand side in prefix operation. (1:3)"
`;

exports[`snippet: #8 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:4)
> 1 | --(1 + 2)
    |    ^^^^^"
`;

exports[`snippet: #8 format 1`] = `
"Invalid left-hand side expression in unary operation (1:3)
> 1 | --(1 + 2)
    |   ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #9 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:2)
> 1 | (x + x)++
    |  ^
Cause: Invalid left-hand side in postfix operation. (1:1)"
`;

exports[`snippet: #9 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:2)
> 1 | (x + x)++
    |  ^^^^^"
`;

exports[`snippet: #9 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | (x + x)++
    | ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #10 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:2)
> 1 | (x + x)--
    |  ^
Cause: Invalid left-hand side in postfix operation. (1:1)"
`;

exports[`snippet: #10 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:2)
> 1 | (x + x)--
    |  ^^^^^"
`;

exports[`snippet: #10 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | (x + x)--
    | ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #11 [babel-ts] format 1`] = `
"Invalid left-hand side in prefix operation. (1:4)
> 1 | ++(x + x)
    |    ^
Cause: Invalid left-hand side in prefix operation. (1:3)"
`;

exports[`snippet: #11 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:4)
> 1 | ++(x + x)
    |    ^^^^^"
`;

exports[`snippet: #11 format 1`] = `
"Invalid left-hand side expression in unary operation (1:3)
> 1 | ++(x + x)
    |   ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #12 [babel-ts] format 1`] = `
"Invalid left-hand side in prefix operation. (1:4)
> 1 | --(x + x)
    |    ^
Cause: Invalid left-hand side in prefix operation. (1:3)"
`;

exports[`snippet: #12 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:4)
> 1 | --(x + x)
    |    ^^^^^"
`;

exports[`snippet: #12 format 1`] = `
"Invalid left-hand side expression in unary operation (1:3)
> 1 | --(x + x)
    |   ^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #13 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:1)
> 1 | a()++
    | ^
Cause: Invalid left-hand side in postfix operation. (1:0)"
`;

exports[`snippet: #13 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:1)
> 1 | a()++
    | ^^^"
`;

exports[`snippet: #13 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | a()++
    | ^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #14 [babel-ts] format 1`] = `
"Invalid optional chaining in the left-hand side of postfix operation. (1:1)
> 1 | x?.y++
    | ^
Cause: Invalid optional chaining in the left-hand side of postfix operation. (1:0)"
`;

exports[`snippet: #14 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:1)
> 1 | x?.y++
    | ^^^^"
`;

exports[`snippet: #14 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | x?.y++
    | ^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #15 [babel-ts] format 1`] = `
"Invalid optional chaining in the left-hand side of postfix operation. (1:1)
> 1 | x?.y.z++
    | ^
Cause: Invalid optional chaining in the left-hand side of postfix operation. (1:0)"
`;

exports[`snippet: #15 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:1)
> 1 | x?.y.z++
    | ^^^^^^"
`;

exports[`snippet: #15 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | x?.y.z++
    | ^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #16 [babel-ts] format 1`] = `
"Invalid optional chaining in the left-hand side of postfix operation. (1:1)
> 1 | x?.y().z++
    | ^
Cause: Invalid optional chaining in the left-hand side of postfix operation. (1:0)"
`;

exports[`snippet: #16 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:1)
> 1 | x?.y().z++
    | ^^^^^^^^"
`;

exports[`snippet: #16 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | x?.y().z++
    | ^^^^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;

exports[`snippet: #17 [babel-ts] format 1`] = `
"Invalid left-hand side in postfix operation. (1:2)
> 1 | (a())++
    |  ^
Cause: Invalid left-hand side in postfix operation. (1:1)"
`;

exports[`snippet: #17 [oxc-ts] format 1`] = `
"Cannot assign to this expression (1:2)
> 1 | (a())++
    |  ^^^"
`;

exports[`snippet: #17 format 1`] = `
"Invalid left-hand side expression in unary operation (1:1)
> 1 | (a())++
    | ^^^^^
Cause: Invalid left-hand side expression in unary operation"
`;
